:memo: update documentation for proper introduction to the repo

--- a/packages/docs/src/pages/home.stories.mdx
+++ b/packages/docs/src/pages/home.stories.mdx
@@ -2,6 +2,16 @@ import { Meta } from '@storybook/addon-docs'
 
 <Meta title="Home" />
 
-# Nekeldev
+# About
 
-Nekeldev's Design System.
+Welcome to my design system documentation, built with Storybook. I intend to keep my entire design process documented, which will be implemented in all my side projects.
+
+Here's the [Source Code](https://github.com/nekelpatrick/nekeldev-design-system) of this repo.
+
+## Bonus
+
+[Check out my portfolio](https://patrick-nekel.vercel.app/), which is being refactored to use this Design System.
+
+Also, my [Simple Pomodoro](https://simple-pomodoro-nekel.vercel.app/) application.
+
+Cheers! 🇧🇷😬
